Test ApplyPatches library JS code

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chromium_rebase_l10n": "node ./scripts/commands.js chromium_rebase_l10n",
     "lint": "node ./scripts/commands.js lint",
     "test": "node ./scripts/commands.js test",
+    "test:scripts": "jest lib scripts",
     "test-security": "npm run audit_deps && node ./scripts/commands.js start --enable_brave_update --network_log --user_data_dir_name=brave-network-test"
   },
   "config": {
@@ -257,9 +258,10 @@
   "dependencies": {
     "chalk": "^2.4.2",
     "commander": "^2.9.0",
-    "fs-extra": "^1.0.0"
+    "fs-extra": "^8.0.1"
   },
   "devDependencies": {
-    "ip": "^1.1.5"
+    "ip": "^1.1.5",
+    "jest": "^24.8.0"
   }
 }
